--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>G3 Architecture</title>
     <link rel="stylesheet" href="/Styles/style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h3 class="brand">G3 Architectes</h3>
+        </nav>
     </header>
 
     <main>
