--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
             <img class="banner-image" src="/images/banner.png" alt="">
         </div>
     </header>
-
     <main>
-
+        <section class="teams display-flex">
+           <div class="team-img-container">
+            <img src="./images/team1.png" alt="Two architect discussing about design">
+            <img src="./images/team2.png" alt="Two female and one male architect are standing photoshoot">
+            <img src="./images/team3.png" alt="Two architect employee discussing">
+            <img src="./images/team4.png" alt="">
+           </div>
+           <div class="our-features">
+            <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick List</span> of Our <span class="text-primary">Features</span></h3>
+            <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+           </div> 
+        </section>
     </main>
 
     <footer>
