--- a/index.html
+++ b/index.html
@@ -41,6 +41,37 @@
             <button class="btn-primary">Explore More</button>
            </div> 
         </section>
+        <!-- Features Section -->
+         <section class="features display-flex">
+          <div>
+            <h3 id="feature-section-title" class="section-title">Features you will<br>love & enjoy</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="feature-card">
+              <h4 class="feature-title">Desktop and Mobile version</h4>
+              <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+              <h4 class="feature-title">Drag & Drop Builder</h4>
+              <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+              <h4 class="feature-title">Awesome Modern Design</h4>
+              <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+              <h4 class="feature-title">Super Easy to Edit</h4>
+              <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+          </div>
+          <div class="featured-architect">
+            <img src="./images/architect.png" alt="">
+            <button id="experience-badge" class="btn-primary">
+              <span id="experience-year">10+Year</span>
+              <br>
+              <span>Experience</span>
+            </button>
+          </div>
+         </section>
         <!-- More Type Features -->
          <section>
             <h3 class="section-title">Some Facts</h3>
@@ -94,8 +125,10 @@
           </section>
     </main>
 
-    <footer>
-
+    <footer class="footer-wrapper">
+      <div class="footer">
+        <p>All rights reserved copyright@2025 startup landing page design</p>
+      </div>
     </footer>
 </body>
 </html>
